--- a/app/views/registered_applications/new.html.erb
+++ b/app/views/registered_applications/new.html.erb
@@ -9,7 +9,7 @@
        </div>
        <div class="form-group">
          <%= f.label :url %>
-         <%= f.text_area :url, rows: 8, class: 'form-control', placeholder: "Enter the Application url" %>
+         <%= f.text_field :url, rows: 8, class: 'form-control', placeholder: "Enter the Application url" %>
        </div>
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
