--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
     <div class="form-group">
-        <label><h1>Welcome#about</h1></label>
-        <p>Find me in app/views/welcome/about.html.erb</p>
+        <label><h1>Blocmetrics is really super awesome</h1></label>
     </div>
 </div>
